--- a/package.json
+++ b/package.json
@@ -6,13 +6,16 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "dev": "nodemon API/app.js"
+    "dev": "nodemon API/app.js",
+    "start": "node API/app.js"
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
     "core-js": "^3.6.5",
-    "vue": "^2.6.11",
     "express": "^4.17.1",
-    "mongodb": "^3.6.6"
+    "mongodb": "^3.6.6",
+    "path": "^0.12.7",
+    "vue": "^2.6.11"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
@@ -22,9 +25,9 @@
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
     "node-sass": "^5.0.0",
+    "nodemon": "^2.0.7",
     "sass-loader": "10.1.1",
-    "vue-template-compiler": "^2.6.11",
-    "nodemon": "^2.0.7"
+    "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
     "root": true,
